--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -13,6 +13,7 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
   <package id="Splat" version="1.6.2" targetFramework="net45" />
+  <package id="UDE.CSharp" version="1.1.0" targetFramework="net46" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="ValueInjecter" version="3.0.1.1" targetFramework="net45" />
 </packages>
