Added Georgian and Dutch translations.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -798,6 +798,8 @@
     <EmbeddedResource Include="Resources\ChapterMarkersRes.hu.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.it.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.ja.resx" />
+    <EmbeddedResource Include="Resources\ChapterMarkersRes.ka.resx" />
+    <EmbeddedResource Include="Resources\ChapterMarkersRes.nl.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.pl.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.pt.resx" />
@@ -817,6 +819,8 @@
     <EmbeddedResource Include="Resources\CommonRes.fr.resx" />
     <EmbeddedResource Include="Resources\CommonRes.it.resx" />
     <EmbeddedResource Include="Resources\CommonRes.ja.resx" />
+    <EmbeddedResource Include="Resources\CommonRes.ka.resx" />
+    <EmbeddedResource Include="Resources\CommonRes.nl.resx" />
     <EmbeddedResource Include="Resources\CommonRes.pl.resx" />
     <EmbeddedResource Include="Resources\CommonRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\CommonRes.pt.resx" />
@@ -832,6 +836,8 @@
     <EmbeddedResource Include="Resources\EncodeDetailsRes.hu.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.it.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.ja.resx" />
+    <EmbeddedResource Include="Resources\EncodeDetailsRes.ka.resx" />
+    <EmbeddedResource Include="Resources\EncodeDetailsRes.nl.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.pl.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.pt.resx" />
@@ -852,6 +858,8 @@
     <EmbeddedResource Include="Resources\EncodingRes.hu.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.it.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.ja.resx" />
+    <EmbeddedResource Include="Resources\EncodingRes.ka.resx" />
+    <EmbeddedResource Include="Resources\EncodingRes.nl.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.pl.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.pt.resx" />
@@ -874,6 +882,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\EnumsRes.it.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.ja.resx" />
+    <EmbeddedResource Include="Resources\EnumsRes.ka.resx" />
+    <EmbeddedResource Include="Resources\EnumsRes.nl.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.pl.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.pt.resx" />
@@ -894,6 +904,8 @@
     <EmbeddedResource Include="Resources\LogRes.hu.resx" />
     <EmbeddedResource Include="Resources\LogRes.it.resx" />
     <EmbeddedResource Include="Resources\LogRes.ja.resx" />
+    <EmbeddedResource Include="Resources\LogRes.ka.resx" />
+    <EmbeddedResource Include="Resources\LogRes.nl.resx" />
     <EmbeddedResource Include="Resources\LogRes.pl.resx" />
     <EmbeddedResource Include="Resources\LogRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\LogRes.pt.resx" />
@@ -917,6 +929,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\MainRes.it.resx" />
     <EmbeddedResource Include="Resources\MainRes.ja.resx" />
+    <EmbeddedResource Include="Resources\MainRes.ka.resx" />
+    <EmbeddedResource Include="Resources\MainRes.nl.resx" />
     <EmbeddedResource Include="Resources\MainRes.pl.resx" />
     <EmbeddedResource Include="Resources\MainRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\MainRes.pt.resx" />
@@ -937,6 +951,8 @@
     <EmbeddedResource Include="Resources\MiscRes.hu.resx" />
     <EmbeddedResource Include="Resources\MiscRes.it.resx" />
     <EmbeddedResource Include="Resources\MiscRes.ja.resx" />
+    <EmbeddedResource Include="Resources\MiscRes.ka.resx" />
+    <EmbeddedResource Include="Resources\MiscRes.nl.resx" />
     <EmbeddedResource Include="Resources\MiscRes.pl.resx" />
     <EmbeddedResource Include="Resources\MiscRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\MiscRes.pt.resx" />
@@ -957,6 +973,8 @@
     <EmbeddedResource Include="Resources\OptionsRes.hu.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.it.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.ja.resx" />
+    <EmbeddedResource Include="Resources\OptionsRes.ka.resx" />
+    <EmbeddedResource Include="Resources\OptionsRes.nl.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.pl.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.pt.resx" />
@@ -977,6 +995,8 @@
     <EmbeddedResource Include="Resources\PreviewRes.hu.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.it.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.ja.resx" />
+    <EmbeddedResource Include="Resources\PreviewRes.ka.resx" />
+    <EmbeddedResource Include="Resources\PreviewRes.nl.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.pl.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.pt.resx" />
@@ -996,6 +1016,8 @@
     <EmbeddedResource Include="Resources\QueueTitlesRes.hu.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.it.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.ja.resx" />
+    <EmbeddedResource Include="Resources\QueueTitlesRes.ka.resx" />
+    <EmbeddedResource Include="Resources\QueueTitlesRes.nl.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.pl.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.pt.resx" />
@@ -1018,6 +1040,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\SubtitleRes.it.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.ja.resx" />
+    <EmbeddedResource Include="Resources\SubtitleRes.ka.resx" />
+    <EmbeddedResource Include="Resources\SubtitleRes.nl.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.pl.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.pt.resx" />
