Changed stop on exit behavior to keep the queue item, rather than clear it.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -511,6 +511,7 @@
     <Compile Include="Model\EncodeJobsXml.cs" />
     <Compile Include="Model\EncodeProgress.cs" />
     <Compile Include="Model\EncodeResultStatus.cs" />
+    <Compile Include="Model\EncodeCompleteReason.cs" />
     <Compile Include="Model\PresetWrapper.cs" />
     <Compile Include="Model\PreviewControls.cs" />
     <Compile Include="Model\PreviewEncodeState.cs" />
