Added logging to the target size calculation and refactored loggers to work better in the worker process. Changed log window to only scroll to the bottom on new logs if we were already at the bottom, so it doesn't pop you out if you scrolled away to look at something earlier in the log.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -621,7 +621,7 @@
     <Compile Include="Services\PreviewUpdateService.cs" />
     <Compile Include="Services\StatusService.cs" />
     <Compile Include="Services\Windows\IClosableWindow.cs" />
-    <Compile Include="Services\Interfaces\ILogger.cs" />
+    <Compile Include="Services\Interfaces\IAppLogger.cs" />
     <Compile Include="Services\Interfaces\IPresetImportExport.cs" />
     <Compile Include="Services\Interfaces\IProcesses.cs" />
     <Compile Include="Services\Interfaces\IProcessAutoPause.cs" />
@@ -651,7 +651,7 @@
     <Compile Include="Utilities\Ioc.cs" />
     <Compile Include="Utilities\LanguageUtilities.cs" />
     <Compile Include="Utilities\ListSynchronizer\IListItemConverter.cs" />
-    <Compile Include="Services\Logger.cs" />
+    <Compile Include="Services\AppLogger.cs" />
     <Compile Include="Utilities\ListSynchronizer\MultiSelectorBehaviors.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Utilities\ListSynchronizer\TwoListSynchronizer.cs" />
