--- a/VidCoderCommon/VidCoderCommon.csproj
+++ b/VidCoderCommon/VidCoderCommon.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Model\VidCoderContractResolver.cs" />
     <Compile Include="Model\VideoRangeType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ILogger.cs" />
     <Compile Include="Utilities\Injection\FastDeepCloneInjection.cs" />
     <Compile Include="Utilities\Injection\SmartConventionInfo.cs" />
     <Compile Include="Utilities\Injection\SmartConventionInjection.cs" />
