--- a/VidCoderWorker/VidCoderWorker.csproj
+++ b/VidCoderWorker/VidCoderWorker.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerDatabase.cs" />
+    <Compile Include="WorkerErrorLogger.cs" />
     <Compile Include="WorkerLogger.cs" />
   </ItemGroup>
   <ItemGroup>
