--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="FastMember" version="1.0.0.11" targetFramework="net45" />
-  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="reactiveui" version="6.5.0" targetFramework="net45" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
@@ -14,6 +14,6 @@
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
   <package id="Splat" version="1.6.2" targetFramework="net45" />
   <package id="UDE.CSharp" version="1.1.0" targetFramework="net46" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
-  <package id="ValueInjecter" version="3.0.1.1" targetFramework="net45" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
+  <package id="valueinjecter" version="3.1.1.3" targetFramework="net46" />
 </packages>
