Added proper newline characters to other resources page

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,9 @@ header: yes
 header_xl: images/BannerLarge.png
 
 # Build settings
-markdown: redcarpet
+markdown: kramdown
+kramdown:
+  input: GFM
 
 destination: _site
 
