--- a/VidCoderCommon/packages.config
+++ b/VidCoderCommon/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="FastMember" version="1.0.0.11" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="reactiveui" version="6.5.0" targetFramework="net46" />
