--- a/VidCoderWorker/packages.config
+++ b/VidCoderWorker/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="Unity" version="4.0.1" targetFramework="net46" />
 </packages>
